--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<div id="wrapper">
+  <p class="text-center">Copyright © Vedis 2024. All rights reserved.</p>
+
+  <div id="links" class="d-flex gap-1">
+    <a routerLink="">Політика конфедеційності</a>
+    <span> | </span>
+    <a routerLink="">Договір оферта</a>
+  </div>
+</div>
