add landing, lang tests frontend

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -127,7 +127,9 @@
         </li>
 
         <li>
-          <a routerLink="/login" class="nav-link custom-link underscore-link">Увійти</a>
+          <a routerLink="/login" class="nav-link custom-link underscore-link"
+            >Увійти</a
+          >
         </li>
 
         <li>
@@ -199,7 +201,7 @@
         <a class="nav-link offcanvas-link mb-2" href="#">Контакти</a>
       </li>
       <li>
-        <a class="nav-link offcanvas-link mb-2" href="#">Увійти</a>
+        <a routerLink="/login" class="nav-link offcanvas-link mb-2">Увійти</a>
       </li>
       <li>
         <a id="offcanvas-cta-btn" class="nav-link" href="#">Зареєструватися</a>
