--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-navigation></app-navigation>
-
-<router-outlet></router-outlet>
-
-<app-footer></app-footer>
+<div class="app-container">
+  <app-navigation></app-navigation>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+</div>
