add login, signin api + frontend

--- a/frontend/src/app/components/landing-tests/english-test/english-test.component.css
+++ b/frontend/src/app/components/landing-tests/english-test/english-test.component.css
@@ -37,7 +37,7 @@ p {
 }
 
 .test-card {
-  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: var(--shadow);
   padding: 10px 10px 20px 10px;
   border-radius: 20px;
   width: 200px;
