--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,9 +1,10 @@
 .app-container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Ensure the container takes up at least the full height of the viewport */
+  min-height: 100vh;
 }
 
 .content {
-  flex: 1; /* Allow the content to expand to fill the available space */
+  flex: 1;
+  display: flex;
 }
