--- a/frontend/src/app/components/navigation/navigation.component.css
+++ b/frontend/src/app/components/navigation/navigation.component.css
@@ -193,10 +193,7 @@
 
 
 #bottom-links {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-top: 20px;
   display: flex;
   gap: 10px;
   align-items: center;
@@ -221,4 +218,41 @@
 
 #bottom-links span {
   font-size: 20px;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 3px solid #c0a5f6;
+  cursor: pointer;
+}
+
+.icon-wrapper {
+  display: inline-flex;
+  background-color: #d7d7d7;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+}
+
+fa-icon {
+  font-size: 15px;
+}
+
+@media screen and (max-width: 437px) {
+  .offcanvas-link {
+    font-size: 20px;
+  }
+
+  #offcanvas-cta-btn {
+    font-size: 20px;
+  }
+
+  #bottom-links button {
+    font-size: 20px;
+  }
 }
